test/modules/vass/deinit-parenless-error.good
deinit-parenless-error.chpl:2: error: module deinit() functions must have parentheses
