test/modules/vass/deinit-parenless-error.chpl

proc deinit {
  writeln("module.deinit");
}

writeln("hi");
